added and centered elements

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,10 +1,29 @@
 <div class="jumbotron">
   <div class="container">
-   <h1>coop!</h1>
-   <p>connect with urban coops in your area. get fresh, local eggs.</p>
-   <p><a class="btn btn-default btn-lg" href="#" role="button">learn more</a></p>
+  	<div class="row-one">
+  		<div class="col-md-6 col-md-offset-3">
+		   <h1>coop</h1>
+		   <p>connect with urban coops in your area. <strong>get fresh, local eggs.</strong></p>
+		   <p><a class="btn btn-default btn-lg" href="#/map" role="button">sign me up</a></p>
+		</div>
+   </div>
+</div>
+</div>
 
-  </div>
+<div class="jumbotron">
+	<div class="container">
+		<div class="row-two">
+			<div class="col-md-5 col-md-offset-1">
+				<h2 class="section-two">Users</h2>
+				<p>sign up and search for local coops based on address, connect with keepers + chickens + eggs.</p>
+			</div>
+			<div class="col-md-5 col-md-offset-1">
+				<h2 class="section-two">Keepers</h2>
+				<p>list your coop, share your eggs + connect with users + community</p>
+			</div>
+
+		</div>
+	</div>
 </div>
 
 
