--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<!-- <div class="jumbotron">
   <div class="container">
   	<div class="row-one">
   		<div class="col-md-6 col-md-offset-3">
@@ -10,7 +10,6 @@
 </div>
 </div>
 
-<div class="jumbotron">
 	<div class="container">
 		<div class="row-two">
 			<div class="col-md-5 col-md-offset-1">
@@ -24,6 +23,48 @@
 
 		</div>
 	</div>
+
+ -->
+
+<div class="main">
+  <div class="site-wrapper">
+
+      <div class="site-wrapper-inner">
+
+        <div class="cover-container">
+
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h3 class="masthead-brand">coop</h3>
+              <nav>
+                <ul class="nav masthead-nav">
+                  <li><a href="#">home</a></li>
+                  <li><a href="#">sign in</a></li>
+                  <li class="active"><a href="#">list your coop</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+
+          <div class="inner cover">
+            <h1 class="cover-heading">Find A Coop</h1><br>
+            <p class="lead">connect with urban coops in your area, <strong>get fresh, local eggs</strong></p>
+            <p class="lead">
+              <a href="#" class="btn btn-lg btn-default">sign me up</a>
+            </p>
+          </div>
+
+          <div class="mastfoot">
+            <div class="inner">
+              <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
 </div>
 
 
