added image and saved in app folder

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -35,7 +35,7 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">coop</h3>
+              <h3 class="masthead-brand"><a href="/#/map">coop</a></h3>
               <nav>
                 <ul class="nav masthead-nav">
                   <li><a href="#">home</a></li>
