--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -38,9 +38,9 @@
               <h3 class="masthead-brand"><a href="/#/map">coop</a></h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li><a href="#">home</a></li>
+                  <li><a href="/#/">home</a></li>
                   <li><a href="#">sign in</a></li>
-                  <li class="active"><a href="#">list your coop</a></li>
+                  <li class="active"><a href="/#/owner">list your coop</a></li>
                 </ul>
               </nav>
             </div>
