created working coop form and styles

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -38,7 +38,7 @@
               <h3 class="masthead-brand"><a href="/#/map">coop</a></h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li><a href="/#/">home</a></li>
+                  <!-- <li><a href="/#/">home</a></li> -->
                   <li><a href="#">sign in</a></li>
                   <li class="active"><a href="/#/owner">list your coop</a></li>
                 </ul>
