--- a/app/templates/owner.html
+++ b/app/templates/owner.html
@@ -9,7 +9,7 @@
 </div>
 </div>
 
-<div class="newCoop">
+<div class="newCoopForm">
 	<form ng-submit="addCoop(newCoop)">
 		<div class="form-group">
 	    <label for="coopName">Name</label>
