added modal form

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -40,7 +40,7 @@
                 <ul class="nav masthead-nav">
                   <!-- <li><a href="/#/">home</a></li> -->
                   <li><a href="#">sign in</a></li>
-                  <li class="active"><a href="/#/owner">list your coop</a></li>
+                  <li class="active"><a href="/#/coop">list your coop</a></li>
                 </ul>
               </nav>
             </div>
@@ -50,7 +50,7 @@
             <h1 class="cover-heading">Find A Coop</h1><br>
             <p class="lead">connect with urban coops in your area, <strong>get fresh, local eggs</strong></p>
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">sign me up</a>
+              <a href="/#/signup" class="btn btn-lg btn-default">sign me up</a>
             </p>
           </div>
 
