--- a/style.css
+++ b/style.css
@@ -80,8 +80,9 @@ body {
 .masthead-nav > li > a {
   padding-right: 0;
   padding-left: 0;
-  font-size: 16px;
-  font-weight: bold;
+  font-size: 18px;
+  /*font-family: Courier;*/
+  font-weight: normal;
   color: #fff; /* IE8 proofing */
   color: rgba(255,255,255,.75);
   border-bottom: 2px solid transparent;
@@ -118,7 +119,7 @@ body {
 }
 .cover .btn-lg {
   padding: 10px 20px;
-  font-weight: bold;
+  font-weight: normal;
 }
 
 
@@ -167,9 +168,13 @@ body {
 }
 
 .jumbotron {
-  height: 250px;
+  height: 300px;
   text-align: center;
-  background-color: #e1f9f8;
+  /*background-color: #e1f9f8;*/
+  background-image: url("../app/images/eggs.jpg");
+  background-size: cover;
+  color: #fff;
+  text-shadow: 0 5px 15px rgba(0,0,0,1.5);
 }
 
 .jumbotron p {
@@ -179,6 +184,10 @@ body {
 .newCoopForm {
   width: 60%;
   margin: 0 auto;
+}
+
+.modal {
+  text-align: center;
 }
 
 
