--- a/app/templates/coop.html
+++ b/app/templates/coop.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <div class="jumbotron text-center">
 	  	<div class="row-one">
 	  		<!-- <div class="col-md-6 col-md-offset-3"> -->
@@ -44,6 +44,6 @@
 	  </div>
 
 
-	  <button class="btn btn-info" type="submit">let's share</button>
+	  <button class="btn btn-info btn-block" type="submit">let's share</button>
 	</form>
 </div>
