--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -50,7 +50,7 @@
             <h1 class="cover-heading">Find A Coop</h1><br>
             <p class="lead">connect with urban coops in your area, <strong>get fresh, local eggs</strong></p>
             <p class="lead">
-              <a href="/#/signup" class="btn btn-lg btn-default">sign me up</a>
+              <a href="/#/signup-user" class="btn btn-lg btn-default">sign me up</a>
             </p>
           </div>
 
