--- a/app/templates/signup-user.html
+++ b/app/templates/signup-user.html
@@ -1,22 +1,7 @@
 <div class="signup">
-
 	<div class="signupForm">
-	  <form>
-	    <h3>sign in</h3>
-			  <div class="form-group">
-			    <label class="sr-only" for="exampleInputEmail3">Email address</label>
-			    <input type="email" class="form-control" id="exampleInputEmail3" placeholder="email">
-			  </div>
-			  <div class="form-group">
-			    <label class="sr-only" for="exampleInputPassword3">Password</label>
-			    <input type="password" class="form-control" id="exampleInputPassword3" placeholder="password">
-			  </div>
-			  <button type="submit" class="btn btn-default btn-lg center-block">sign in</button>
-	  </form>
-	  <br>
 
-
-	  <h3>need an account? sign up</h3>
+	<h1 class="getEggs">fresh eggs are waiting</h1>
 	     
 	  <form ng-submit="addUser(newUser)" method="post">
 	      	<div class="form-group">
@@ -37,4 +22,3 @@
 	  </form>
 	</div>
 </div>
- 
